PyLikeParser.py
# Generated from PyLike.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PyLikeParser ( Parser ):

    grammarFileName = "PyLike.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'if'", "'elif'", "'else'", "'while'", 
                     "'for'", "'in'", "'return'", "'print'", "'input'", 
                     "'and'", "'or'", "'not'", "'True'", "'False'", "'None'", 
                     "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", "'='", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "','", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "'.'" ]

    symbolicNames = [ "<INVALID>", "DEF", "IF", "ELIF", "ELSE", "WHILE", 
                      "FOR", "IN", "RETURN", "PRINT", "INPUT", "AND", "OR", 
                      "NOT", "TRUE", "FALSE", "NONE", "EQ", "NEQ", "LTE", 
                      "GTE", "LT", "GT", "ASSIGN", "PLUS", "MINUS", "MUL", 
                      "DIV", "MOD", "COMMA", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "LBRACK", "RBRACK", "DOT", "NUMBER", "STRING", 
                      "ID", "LINE_COMMENT", "LINE_COMMENT2", "COMMENT", 
                      "WS" ]

    RULE_programa = 0
    RULE_declaracao = 1
    RULE_comandos = 2
    RULE_bloco = 3
    RULE_declaracaoFuncao = 4
    RULE_listaParametros = 5
    RULE_escreva = 6
    RULE_leia = 7
    RULE_declaracaoSe = 8
    RULE_condicao = 9
    RULE_declaracaoEnquanto = 10
    RULE_declaracaoPara = 11
    RULE_declaracaoRetorno = 12
    RULE_atribuicao = 13
    RULE_atribuivel = 14
    RULE_expressao = 15
    RULE_logicoOu = 16
    RULE_logicoE = 17
    RULE_igualdade = 18
    RULE_comparacao = 19
    RULE_adicao = 20
    RULE_multiplicacao = 21
    RULE_unario = 22
    RULE_primario = 23
    RULE_chamadaFuncao = 24
    RULE_listaArgumentos = 25
    RULE_literal = 26

    ruleNames =  [ "programa", "declaracao", "comandos", "bloco", "declaracaoFuncao", 
                   "listaParametros", "escreva", "leia", "declaracaoSe", 
                   "condicao", "declaracaoEnquanto", "declaracaoPara", "declaracaoRetorno", 
                   "atribuicao", "atribuivel", "expressao", "logicoOu", 
                   "logicoE", "igualdade", "comparacao", "adicao", "multiplicacao", 
                   "unario", "primario", "chamadaFuncao", "listaArgumentos", 
                   "literal" ]

    EOF = Token.EOF
    DEF=1
    IF=2
    ELIF=3
    ELSE=4
    WHILE=5
    FOR=6
    IN=7
    RETURN=8
    PRINT=9
    INPUT=10
    AND=11
    OR=12
    NOT=13
    TRUE=14
    FALSE=15
    NONE=16
    EQ=17
    NEQ=18
    LTE=19
    GTE=20
    LT=21
    GT=22
    ASSIGN=23
    PLUS=24
    MINUS=25
    MUL=26
    DIV=27
    MOD=28
    COMMA=29
    LPAREN=30
    RPAREN=31
    LBRACE=32
    RBRACE=33
    LBRACK=34
    RBRACK=35
    DOT=36
    NUMBER=37
    STRING=38
    ID=39
    LINE_COMMENT=40
    LINE_COMMENT2=41
    COMMENT=42
    WS=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PyLikeParser.EOF, 0)

        def declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyLikeParser.DeclaracaoContext)
            else:
                return self.getTypedRuleContext(PyLikeParser.DeclaracaoContext,i)


        def getRuleIndex(self):
            return PyLikeParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = PyLikeParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 967475062630) != 0):
                self.state = 54
                self.declaracao()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(PyLikeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracaoFuncao(self):
            return self.getTypedRuleContext(PyLikeParser.DeclaracaoFuncaoContext,0)


        def comandos(self):
            return self.getTypedRuleContext(PyLikeParser.ComandosContext,0)


        def declaracaoSe(self):
            return self.getTypedRuleContext(PyLikeParser.DeclaracaoSeContext,0)


        def declaracaoEnquanto(self):
            return self.getTypedRuleContext(PyLikeParser.DeclaracaoEnquantoContext,0)


        def declaracaoPara(self):
            return self.getTypedRuleContext(PyLikeParser.DeclaracaoParaContext,0)


        def declaracaoRetorno(self):
            return self.getTypedRuleContext(PyLikeParser.DeclaracaoRetornoContext,0)


        def atribuicao(self):
            return self.getTypedRuleContext(PyLikeParser.AtribuicaoContext,0)


        def expressao(self):
            return self.getTypedRuleContext(PyLikeParser.ExpressaoContext,0)


        def bloco(self):
            return self.getTypedRuleContext(PyLikeParser.BlocoContext,0)


        def getRuleIndex(self):
            return PyLikeParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)




    def declaracao(self):

        localctx = PyLikeParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracao)
        try:
            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.declaracaoFuncao()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.comandos()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.declaracaoSe()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 65
                self.declaracaoEnquanto()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 66
                self.declaracaoPara()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 67
                self.declaracaoRetorno()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 68
                self.atribuicao()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 69
                self.expressao()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 70
                self.bloco()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def escreva(self):
            return self.getTypedRuleContext(PyLikeParser.EscrevaContext,0)


        def leia(self):
            return self.getTypedRuleContext(PyLikeParser.LeiaContext,0)


        def getRuleIndex(self):
            return PyLikeParser.RULE_comandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandos" ):
                listener.enterComandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandos" ):
                listener.exitComandos(self)




    def comandos(self):

        localctx = PyLikeParser.ComandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_comandos)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.escreva()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.leia()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(PyLikeParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(PyLikeParser.RBRACE, 0)

        def declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyLikeParser.DeclaracaoContext)
            else:
                return self.getTypedRuleContext(PyLikeParser.DeclaracaoContext,i)


        def getRuleIndex(self):
            return PyLikeParser.RULE_bloco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloco" ):
                listener.enterBloco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloco" ):
                listener.exitBloco(self)




    def bloco(self):

        localctx = PyLikeParser.BlocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bloco)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(PyLikeParser.LBRACE)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 967475062630) != 0):
                self.state = 78
                self.declaracao()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(PyLikeParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoFuncaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(PyLikeParser.DEF, 0)

        def ID(self):
            return self.getToken(PyLikeParser.ID, 0)

        def LPAREN(self):
            return self.getToken(PyLikeParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PyLikeParser.RPAREN, 0)

        def bloco(self):
            return self.getTypedRuleContext(PyLikeParser.BlocoContext,0)


        def listaParametros(self):
            return self.getTypedRuleContext(PyLikeParser.ListaParametrosContext,0)


        def getRuleIndex(self):
            return PyLikeParser.RULE_declaracaoFuncao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracaoFuncao" ):
                listener.enterDeclaracaoFuncao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracaoFuncao" ):
                listener.exitDeclaracaoFuncao(self)




    def declaracaoFuncao(self):

        localctx = PyLikeParser.DeclaracaoFuncaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaracaoFuncao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(PyLikeParser.DEF)
            self.state = 87
            self.match(PyLikeParser.ID)
            self.state = 88
            self.match(PyLikeParser.LPAREN)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==39:
                self.state = 89
                self.listaParametros()


            self.state = 92
            self.match(PyLikeParser.RPAREN)
            self.state = 93
            self.bloco()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PyLikeParser.ID)
            else:
                return self.getToken(PyLikeParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PyLikeParser.COMMA)
            else:
                return self.getToken(PyLikeParser.COMMA, i)

        def getRuleIndex(self):
            return PyLikeParser.RULE_listaParametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaParametros" ):
                listener.enterListaParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaParametros" ):
                listener.exitListaParametros(self)




    def listaParametros(self):

        localctx = PyLikeParser.ListaParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_listaParametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(PyLikeParser.ID)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 96
                self.match(PyLikeParser.COMMA)
                self.state = 97
                self.match(PyLikeParser.ID)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EscrevaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(PyLikeParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(PyLikeParser.LPAREN, 0)

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyLikeParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(PyLikeParser.ExpressaoContext,i)


        def RPAREN(self):
            return self.getToken(PyLikeParser.RPAREN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PyLikeParser.COMMA)
            else:
                return self.getToken(PyLikeParser.COMMA, i)

        def getRuleIndex(self):
            return PyLikeParser.RULE_escreva

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscreva" ):
                listener.enterEscreva(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscreva" ):
                listener.exitEscreva(self)




    def escreva(self):

        localctx = PyLikeParser.EscrevaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_escreva)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(PyLikeParser.PRINT)
            self.state = 104
            self.match(PyLikeParser.LPAREN)
            self.state = 105
            self.expressao()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 106
                self.match(PyLikeParser.COMMA)
                self.state = 107
                self.expressao()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self.match(PyLikeParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LeiaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUT(self):
            return self.getToken(PyLikeParser.INPUT, 0)

        def LPAREN(self):
            return self.getToken(PyLikeParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PyLikeParser.RPAREN, 0)

        def expressao(self):
            return self.getTypedRuleContext(PyLikeParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return PyLikeParser.RULE_leia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeia" ):
                listener.enterLeia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeia" ):
                listener.exitLeia(self)




    def leia(self):

        localctx = PyLikeParser.LeiaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_leia)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(PyLikeParser.INPUT)
            self.state = 116
            self.match(PyLikeParser.LPAREN)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 963180093440) != 0):
                self.state = 117
                self.expressao()


            self.state = 120
            self.match(PyLikeParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoSeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(PyLikeParser.IF, 0)

        def condicao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyLikeParser.CondicaoContext)
            else:
                return self.getTypedRuleContext(PyLikeParser.CondicaoContext,i)


        def bloco(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyLikeParser.BlocoContext)
            else:
                return self.getTypedRuleContext(PyLikeParser.BlocoContext,i)


        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(PyLikeParser.ELIF)
            else:
                return self.getToken(PyLikeParser.ELIF, i)

        def ELSE(self):
            return self.getToken(PyLikeParser.ELSE, 0)

        def getRuleIndex(self):
            return PyLikeParser.RULE_declaracaoSe

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracaoSe" ):
                listener.enterDeclaracaoSe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracaoSe" ):
                listener.exitDeclaracaoSe(self)




    def declaracaoSe(self):

        localctx = PyLikeParser.DeclaracaoSeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_declaracaoSe)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(PyLikeParser.IF)
            self.state = 123
            self.condicao()
            self.state = 124
            self.bloco()
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 125
                self.match(PyLikeParser.ELIF)
                self.state = 126
                self.condicao()
                self.state = 127
                self.bloco()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 134
                self.match(PyLikeParser.ELSE)
                self.state = 135
                self.bloco()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(PyLikeParser.LPAREN, 0)

        def expressao(self):
            return self.getTypedRuleContext(PyLikeParser.ExpressaoContext,0)


        def RPAREN(self):
            return self.getToken(PyLikeParser.RPAREN, 0)

        def getRuleIndex(self):
            return PyLikeParser.RULE_condicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicao" ):
                listener.enterCondicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicao" ):
                listener.exitCondicao(self)




    def condicao(self):

        localctx = PyLikeParser.CondicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condicao)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(PyLikeParser.LPAREN)
                self.state = 139
                self.expressao()
                self.state = 140
                self.match(PyLikeParser.RPAREN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.expressao()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoEnquantoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(PyLikeParser.WHILE, 0)

        def condicao(self):
            return self.getTypedRuleContext(PyLikeParser.CondicaoContext,0)


        def bloco(self):
            return self.getTypedRuleContext(PyLikeParser.BlocoContext,0)


        def getRuleIndex(self):
            return PyLikeParser.RULE_declaracaoEnquanto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracaoEnquanto" ):
                listener.enterDeclaracaoEnquanto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracaoEnquanto" ):
                listener.exitDeclaracaoEnquanto(self)




    def declaracaoEnquanto(self):

        localctx = PyLikeParser.DeclaracaoEnquantoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_declaracaoEnquanto)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(PyLikeParser.WHILE)
            self.state = 146
            self.condicao()
            self.state = 147
            self.bloco()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoParaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(PyLikeParser.FOR, 0)

        def ID(self):
            return self.getToken(PyLikeParser.ID, 0)

        def IN(self):
            return self.getToken(PyLikeParser.IN, 0)

        def expressao(self):
            return self.getTypedRuleContext(PyLikeParser.ExpressaoContext,0)


        def bloco(self):
            return self.getTypedRuleContext(PyLikeParser.BlocoContext,0)


        def getRuleIndex(self):
            return PyLikeParser.RULE_declaracaoPara

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracaoPara" ):
                listener.enterDeclaracaoPara(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracaoPara" ):
                listener.exitDeclaracaoPara(self)




    def declaracaoPara(self):

        localctx = PyLikeParser.DeclaracaoParaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_declaracaoPara)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(PyLikeParser.FOR)
            self.state = 150
            self.match(PyLikeParser.ID)
            self.state = 151
            self.match(PyLikeParser.IN)
            self.state = 152
            self.expressao()
            self.state = 153
            self.bloco()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoRetornoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(PyLikeParser.RETURN, 0)

        def expressao(self):
            return self.getTypedRuleContext(PyLikeParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return PyLikeParser.RULE_declaracaoRetorno

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracaoRetorno" ):
                listener.enterDeclaracaoRetorno(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracaoRetorno" ):
                listener.exitDeclaracaoRetorno(self)




    def declaracaoRetorno(self):

        localctx = PyLikeParser.DeclaracaoRetornoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_declaracaoRetorno)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(PyLikeParser.RETURN)
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 156
                self.expressao()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PyLikeParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(PyLikeParser.ASSIGN, 0)

        def atribuivel(self):
            return self.getTypedRuleContext(PyLikeParser.AtribuivelContext,0)


        def getRuleIndex(self):
            return PyLikeParser.RULE_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao" ):
                listener.enterAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao" ):
                listener.exitAtribuicao(self)




    def atribuicao(self):

        localctx = PyLikeParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(PyLikeParser.ID)
            self.state = 160
            self.match(PyLikeParser.ASSIGN)
            self.state = 161
            self.atribuivel()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuivelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self):
            return self.getTypedRuleContext(PyLikeParser.ExpressaoContext,0)


        def comandos(self):
            return self.getTypedRuleContext(PyLikeParser.ComandosContext,0)


        def getRuleIndex(self):
            return PyLikeParser.RULE_atribuivel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuivel" ):
                listener.enterAtribuivel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuivel" ):
                listener.exitAtribuivel(self)




    def atribuivel(self):
